--- a/web01/index.html
+++ b/web01/index.html
@@ -20,14 +20,16 @@
     <meta property="og:image:height" content="60">
     <!-- 파비콘(바로가기-smartphone 연동) -->
     <!-- 각종 플러그인과 설정 파일 -->
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <script src="./js/jquery-1.11.1.js"></script>
     <link rel="stylesheet" href="./css/reset2.css">
     <style>
     /* header.css */
-    .hd { width: 100%; background-color: #fff; }
+    .hd { width: 100%; background-color: #fff; position: absolute; top: 0; left: 0; z-index: 90; }
     .hd_wrap { width: 1200px; margin: 0 auto; }
     .logo { display: block; width: 149px; height: auto; float: left; margin: 10px 0; }
     .logo img { display: block; width: 100%; height: auto; }
-    .tnb { float: right; margin: 30px; }
+    .tnb { float: right; margin: 30px 0px; }
     .tnb a { padding: 0 15px; font-size: 12px; font-weight: 100; color: #888}
     .tnb a:hover { font-weight: 300; color: #444; }
     .gnb { float: left; width: 700px; margin: 20px; }
@@ -36,7 +38,7 @@
     .gnb:after { content:""; display: block; clear: both; }
     .gnb > ul:after { content:""; display: block; clear: both; }
     .gnb > ul > li { float:left; width: 20%; height: 50px; line-height: 50px; position: relative; }
-    .gnb .dp1 { display: block; text-align: center; color: #444; font-size: 16px; }
+    .gnb .dp1 { display: block; text-align: center; color: #444; background-color: #fff; font-size: 16px; }
     .gnb li:hover .dp1 { border-bottom: 3px solid #007fa8; }
     .gnb .sub { display: none; width: 100%; height: auto; background-color: #fff; 
     position: absolute; top: 70px; left: 0; z-index: 100; border-top: 1px solid #eee; }
@@ -47,7 +49,8 @@
     .gnb li .sub li:hover a { color: #444 }
     
     /* content.css */
-    .vs { clear: both; width: 100%; height: auto; overflow: hidden; }
+    .content { clear: both; width: 100%; }
+    .vs { clear: both; width: 100%; height: 100vh; overflow: hidden; }
     .vdo1 { display:block; width:100%; height:auto; }
     .page { clear:both; width: 100%; }
     .page_wrap { width: 1200px; margin: 0 auto; }
@@ -78,41 +81,29 @@
     .pic_tit { position: absolute; top: 30px; left: 30px; font-size: 20px; }
     .pic_com { position: absolute; top: 180px; left: 30px; font-size: 20px; color: #007fa8; text-shadow: 0 0 3px #fff; }
 
-    #page3 { background-repeat: no-repeat; background-size: cover; background-position: center center; overflow: hidden; }
+    #page3 { background-repeat: no-repeat; background-size: cover; background-position: center center; height:60vh; overflow: hidden; }
     #page3 .page_wrap { width: 100% }
-    .circle_lst { clear: both; width: 1800px; }
-    .circle_lst li { width: 180px; height: 180px; position: relative; border-radius: 90px; overflow: hidden; background-color: #fff; }
+    .circle_lst { clear: both; width: 1800px; padding-bottom: 40px; }
+    .circle_lst li { width: 180px; height: 180px; position: relative; border-radius: 90px; overflow: hidden; background-color: #fff; float: left; margin: 10px; }
     .circle_lst.lst2 li { float: right; }
     .circle_lst li a { display: block; width: 100%; height: 100%; }
     .circle_lst li a img { position: absolute; top: 50%; left: 33px; z-index: 10; margin-top: -20px; }
     
     /* footer.css */
     .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; }
-    .ft_wrap { clear: both; width: 1200%; margin: 0; padding: 60px 50px }
+    .ft_wrap { clear: both; width: 3100px; margin: 0 auto; padding: 60px 50px; }
     .ft_wrap:after { content: ""; display: block; clear: both; }
     .ft_logo { float: left; width: 150px; }
     .ft_mid { float: left; width: 800px; }
     .fnb { clear: both; }
-    .fnb a { color: #999; font-size: 13px; padding-right: 50px; }
-    .fnb a.few { color: #fff; }
+    .fnb a { color: #999; font-size: 14px; padding-right: 50px; }
+    .fnb a.dpc { color: #fff; }
+    .addr { color: #999; padding-top: 30px; font-size: 14px; line-height: 2; }
+    .copyright { color: #999; padding-top: 3px; font-size: 12px; }
+    .ft_sel { float: right; text-align: center; width: 190px; height: 40px; text-align: center; }
+    #sel { color:#999; background-color: #1c1b1b; background-color: transparent; padding: 0 13px;}
+    #sel option { color: #999; }
     </style>
-    <script>
-     $(document).ready(function(){
-        $(window).scroll(function(){
-            var ht = $(window).height();
-            var tp = $(this).scrollTop();
-            if(tp>=600){
-                $(".hd").css("position","fixed");
-            } else {
-                $(".hd").css("position","absolute");
-            }
-        });
-        $
-        $("<ul class='circle_lst lst2'></ul>").insertAfter($(".circle_lst"));
-        $lst1_obj = $(".circle_lst li").clone();
-        $(".circle_lst.lst2").append($lst1_obj);
-    });
-    </script>
 </head>
 <body>
     <div class="wrap">
@@ -307,24 +298,24 @@
                 <div class="ft_mid">
                     <nav class="fnb">
                         <a href="copyright.html">저작권안내</a>
-                        <a href="policy.html" class="few">개인정보 처리방침</a>
+                        <a href="policy.html" class="dpc">개인정보 처리방침</a>
                         <a href="TOS.html">이용약관</a>
                         <p class="addr">고객센터 : 080-600-6000(승용), 080-200-6000(상용)</p>
                         <p class="copyright">COPYRIGHT ⓒ HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</p>
                     </nav>
                 </div>
-                <div class="sel_box">
+                <div class="ft_sel">
                     <select name="sel" id="sel" class="sel">
                         <option value="">Family Site</option>
-                        <option value="group">hyndai group</option>
-                        <option value="genesis">genesis.com</option>
-                        <option value="casper">casper online</option>
-                        <option value="n">n brand</option>
-                        <option value="hmg">business inteligence institute</option>
-                        <option value="studio">moter studio</option>
-                        <option value="kids">kids hyundai</option>
-                        <option value="winwin">shared growth site</option>
-                        <option value="academy">driving academy</option>
+                        <option value="group">현대자동차그룹</option>
+                        <option value="genesis">제네시스닷컴</option>
+                        <option value="casper">캐스퍼 온라인</option>
+                        <option value="n">N 브랜드</option>
+                        <option value="hmg">글로벌경영연구소</option>
+                        <option value="studio">현대 모터스튜디오</option>
+                        <option value="kids">키즈현대</option>
+                        <option value="winwin">동반성장 사이트</option>
+                        <option value="academy">현대 드라이빙 아카데미</option>
                         <option value="online">collection onlineshop</option>
                         <option value="communication">H-ear</option>
                         <option value="soccer">jeonbuk hyundai</option>
