web01 main page

--- a/web01/index.html
+++ b/web01/index.html
@@ -316,9 +316,9 @@
                         <option value="kids">키즈현대</option>
                         <option value="winwin">동반성장 사이트</option>
                         <option value="academy">현대 드라이빙 아카데미</option>
-                        <option value="online">collection onlineshop</option>
-                        <option value="communication">H-ear</option>
-                        <option value="soccer">jeonbuk hyundai</option>
+                        <option value="online">현대 컬렉션 온라인샵</option>
+                        <option value="communication">고객소통채널 H-ear</option>
+                        <option value="soccer">전북 현대모터스 축구단</option>
                     </select>
                 </div>
             </div>
