--- a/web01/index.html
+++ b/web01/index.html
@@ -25,28 +25,28 @@
     <link rel="stylesheet" href="./css/reset2.css">
     <style>
     /* header.css */
-    .hd { width: 100%; background-color: #fff; position: absolute; top: 0; left: 0; z-index: 90; }
-    .hd_wrap { width: 1200px; margin: 0 auto; }
-    .logo { display: block; width: 149px; height: auto; float: left; margin: 10px 0; }
+    .hd { width: 100%; background-color: #fff; height: 70px; position: absolute; top: 0; left: 0; z-index: 90; }
+    .hd_wrap { width: 1200px; margin: 0 auto; border-bottom: 1px solid #eee; }
+    .logo { display: block; width: 149px; height: auto; float: left; margin: 0; }
     .logo img { display: block; width: 100%; height: auto; }
-    .tnb { float: right; margin: 30px 0px; }
-    .tnb a { padding: 0 15px; font-size: 12px; font-weight: 100; color: #888}
+    .tnb { float: right; margin: 25px 0px; }
+    .tnb a { padding: 0 15px; font-size: 12px; font-weight: 100; color: #888; }
     .tnb a:hover { font-weight: 300; color: #444; }
-    .gnb { float: left; width: 700px; margin: 20px; }
+    .gnb { float: left; width: 700px; margin: 10px 30px; }
     
     /* clear-fix 처리 */
     .gnb:after { content:""; display: block; clear: both; }
     .gnb > ul:after { content:""; display: block; clear: both; }
-    .gnb > ul > li { float:left; width: 20%; height: 50px; line-height: 50px; position: relative; }
-    .gnb .dp1 { display: block; text-align: center; color: #444; background-color: #fff; font-size: 16px; }
+    .gnb > ul > li { float:left; width: 20%; height: 70px; line-height: 55px; position: relative; }
+    .gnb .dp1 { display: block; text-align: center; color: #444; font-size: 16px; }
     .gnb li:hover .dp1 { border-bottom: 3px solid #007fa8; }
-    .gnb .sub { display: none; width: 100%; height: auto; background-color: #fff; 
-    position: absolute; top: 70px; left: 0; z-index: 100; border-top: 1px solid #eee; }
+    .gnb .sub { display: none; width: 100%; height: auto;
+    position: absolute; top: 70px; left: 0; z-index: 100; }
     .gnb:hover li .sub { display: block; }
-    .gnb li .sub li { clear: both; height:40px; line-height: 30px; }
-    .gnb li .sub li a { display: block; background-color: #fff; color: #444; font-size: 14px; 
+    .gnb li .sub li { clear: both; height:40px; line-height: 40px; }
+    .gnb li .sub li a { display: block; color: #444; font-size: 14px; 
     text-indent: 2em; white-space: nowrap; text-overflow: ellipsis; }
-    .gnb li .sub li:hover a { color: #444 }
+    .gnb li .sub li:hover a { color: #007fa8; }
     
     /* content.css */
     .content { clear: both; width: 100%; }
@@ -70,10 +70,10 @@
     .cate_com { color: #444; font-size: 18px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
 
     #page2 { background-color: #fff; }
-    .pic_lst { clear: both; width: 100%; }
+    .pic_lst { clear: both; width: 100%;  }
     .pic_lst:after { content: ""; display: block; clear: both; }
-    .pic_lst li { float: left; position: relative; margin-bottom: 40px; }
-    .pic_lst li a { display: block; width: 400px; height: 214px; }
+    .pic_lst li { float: left; position: relative; margin: 40px 110px; }
+    .pic_lst li a { display: block; width: 400px; height: 214px; background-color: #f6f3f2; }
     .pic_lst li a img { display: block; width: 400px; margin-right: 30px; transition-duration: 0.8s; }
     .pic_lst li a:hover img { margin-left: -30px; }
     .pic_lst li a.hv_box { width: 400px; height: 214px; position: absolute; top: 0; left: 0; z-index: 10; transition-duration: 0.8s; }
@@ -104,6 +104,23 @@
     #sel { color:#999; background-color: #1c1b1b; background-color: transparent; padding: 0 13px;}
     #sel option { color: #999; }
     </style>
+    <script>
+        $(document).ready(function(){
+            $(window).scroll(function(){
+                var ht = $(window).height();
+                var tp = $(this).scrollTop();
+                if(tp>=400){
+                    $(".hd").css("position","fixed");
+                } else {
+                    $(".hd").css("position","absolute")
+                }
+            })
+            $
+            $("<ul class='circle_lst lst2></ul>").insertAfter($(".circle_lst"));
+            $lst1_obj = $(".circle_lst li").clone();
+            $(".circle_lst.lst2").append($lst1_obj);
+        });
+    </script>
 </head>
 <body>
     <div class="wrap">
@@ -201,7 +218,7 @@
             </section>
             <section class="page" id="page2">
                 <div class="wrap">
-                    <h1 class="page_tit">차종 라인업</h1>
+                    <h1 class="page_tit">BEST</h1>
                     <ul class="pic_lst">
                         <li>
                             <a href=""><img src="./img/avante.png" alt="" class="pic"></a>
@@ -271,7 +288,7 @@
             </section>
             <section class="page" id="page3">
                 <div class="page_wrap">
-                    <h1 class="page_tit">제휴사</h1>
+                    <h1 class="page_tit">COOPERATE</h1>
                     <ul class="circle_lst">
                         <li><a href=""><img src="img/company-01.png" alt="partners1" class="thumb"></a></li>
                         <li><a href=""><img src="img/company-02.png" alt="partners2" class="thumb"></a></li>
