--- a/web01/index.html
+++ b/web01/index.html
@@ -20,27 +20,10 @@
 
     <script src="./js/jquery-1.11.1.js"></script>
     <link rel="stylesheet" href="./css/reset2.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <style>
 .hd { width: 100%; height: 50px; position: absolute; top: 0; left: 0; z-index: 99; }
-.hd_wrap { width: 100%; margin: 0; display: block; position: relative; }
-.hd_wrap:hover { position: absolute; top: 0; left: 0; z-index: 98; width: 100%; height: 250px; background-color: #ccc; }
-.logo { display: block; width: 166px; height: auto; float: left; margin: 20px 0; }
-.logo img { display: block; width: 149px; height: auto; }
-.tnb { float: right; margin: 20px; }
-.tnb a { padding: 0.8em; font-size: 14px; color: #888; }
-.tnb a:hover { color: #444; font-weight: 600; text-decoration: underline; }
-.gnb { float: left; width: 710px; margin-left: 50px; position: relative; }
-.gnb:after { content: ""; display: block; clear: both; }
-.gnb > ul:after { content: ""; display: block; clear: both; }
-.gnb > ul > li { float: left; width: 20%; line-height: 60px; position: relative; }
-.gnb .dp1 { display: block; color: #fff; font-size: 16px; text-align: center; }
-.gnb li:hover .dp1 { color: #444; font-weight: 600; border-bottom: 5px solid #002c5f; }
-.gnb .sub { display: none; width: 100%; height: auto; position: absolute; top: 65px; left: 0; z-index: 97; }
-.gnb:hover li .sub { display: block; }
-.gnb li .sub li { clear: both; }
-.gnb li .sub li a { display: block; color: #888; font-size: 14px; text-indent: 1.6em; white-space: nowrap; text-overflow: ellipsis; }
-.gnb li .sub li:hover a { color: #007fa8; }
 
 .content { clear: both; width: 100%; }
 .vs { clear: both; width: 100%; height: 100vh; overflow: hidden; }
@@ -87,19 +70,6 @@ margin: 25px; overflow: hidden; position: relative; }
 
 .ft { clear: both; width: 100%; height: 200px; background-color: #1c1b1b; padding-bottom: 50px; }
 .ft_wrap { clear: both; width: 1200px; padding: 60px 50px; }
-.ft_wrap:after { content: ""; display: block; clear: both; }
-.ft_logo { float: left; width: 60px; }
-.ft_box { float: left; width: 700px; padding-left: 50px; }
-.fnb { clear: both; }
-.fnb a { padding: 25px; color: #999; font-size: 14px; }
-.fnb a.dpc { color: #fff; }
-.addr { padding-top: 30px; padding-left: 25px; color: #999; font-size: 14px; line-height: 2; }
-.copyright { padding-top: 5px; padding-left: 25px; color: #999; font-size: 12px; }
-.sel_box { float: right; width: 180px; height: 30px; line-height: 28px; text-align: center; 
-border: 1px solid #999; margin: -2px; }
-#sel { border: none; background-color: #1c1b1b; color: #999; }
-#sel option { color: #999; }
-
 </style>
 <script>
 $(document).ready(function(){
@@ -118,6 +88,7 @@ $(document).ready(function(){
     $(".circle_lst.lst2").append($lst1_obj);
 });    
 </script>
+    <link rel="stylesheet" href="footer.css">
 <body>
     <div class="wrap">
         <header class="hd">
@@ -133,41 +104,41 @@ $(document).ready(function(){
                         <li class="menu1">
                             <a href="" class="dp1">구매정보</a>
                             <ul class="sub">
-                                <li><a href="company.html#page1">모델</a></li>
-                                <li><a href="company.html#page2">상담신청</a></li>
-                                <li><a href="company.html#page3">가이드</a></li>
+                                <li><a href="purchase.html#page1">모델</a></li>
+                                <li><a href="purchase.html#page2">상담신청</a></li>
+                                <li><a href="purchase.html#page3">가이드</a></li>
                             </ul>
                         </li>
                         <li class="menu2">
                             <a href="" class="dp1">네트워크</a>
                             <ul class="sub">
-                                <li><a href="product.html#page1">전시장</a></li>
-                                <li><a href="product.html#page2">판매/시승</a></li>
-                                <li><a href="product.html#page3">엑시던트 스페이스</a></li>
+                                <li><a href="network.html#page1">전시장</a></li>
+                                <li><a href="network.html#page2">판매/시승</a></li>
+                                <li><a href="network.html#page3">엑시던트 스페이스</a></li>
                             </ul>
                         </li>
                         <li class="menu3">
                             <a href="" class="dp1">멤버십</a>
                             <ul class="sub">
-                                <li><a href="service.html#page1">블루멤버스</a></li>
-                                <li><a href="service.html#page2">차량관리</a></li>
-                                <li><a href="service.html#page3">카페이</a></li>
+                                <li><a href="membership.html#page1">블루멤버스</a></li>
+                                <li><a href="membership.html#page2">차량관리</a></li>
+                                <li><a href="membership.html#page3">카페이</a></li>
                             </ul>
                         </li>
                         <li class="menu4">
                             <a href="" class="dp1">고객지원</a>
                             <ul class="sub">
-                                <li><a href="custom.html#page1">FAQ</a></li>
-                                <li><a href="custom.html#page2">문의</a></li>
-                                <li><a href="custom.html#page3">공지사항</a></li>
+                                <li><a href="service.html#page1">FAQ</a></li>
+                                <li><a href="service.html#page2">문의</a></li>
+                                <li><a href="service.html#page3">공지사항</a></li>
                             </ul>
                         </li>
                         <li class="menu5">
                             <a href="" class="dp1">회사소개</a>
                             <ul class="sub">
-                                <li><a href="install.html#page1">기업이념</a></li>
-                                <li><a href="install.html#page2">사업망</a></li>
-                                <li><a href="install.html#page3">판매실적</a></li>
+                                <li><a href="company.html#page1">기업이념</a></li>
+                                <li><a href="company.html#page2">사업망</a></li>
+                                <li><a href="company.html#page3">판매실적</a></li>
                             </ul>
                         </li>
                     </ul>
