--- a/web01/purchase.html
+++ b/web01/purchase.html
@@ -56,7 +56,7 @@ $(document).ready(function(){
     <div class="wrap">
         <header class="hd">
             <div class="hd_wrap">
-                <a href="" class="logo"><img src="./img/logo.png" alt="메인 바로가기"></a>
+                <a href="index.html" class="logo"><img src="./img/logo.png" alt="메인 바로가기"></a>
                 <nav class="tnb">
                     <a href="login.html">로그인</a>
                     <a href="join.html">회원가입</a>
@@ -108,14 +108,14 @@ $(document).ready(function(){
                 </nav>
             </div>
         </header>
-        <div class="content" id="map">
+        <div class="content" id="page1">
             <figure class="vs">
                 <img src="./img/bg_visual.png" alt=""></img>
             </figure>
             <div class="bread">
                 <div class="bread_fr">
-                    <a href="" class="home">HOME</a> &gt;
-                    <select name="sel" id="sel0">
+                    <a href="index.html" class="home">HOME</a> &gt;
+                    <select name="sel1" id="sel1" class="sel">
                         <option>구매정보</option>
                         <option value="network.html#page1">네트워크</option>
                         <option value="membership.html#page1">멤버십</option>
@@ -126,28 +126,93 @@ $(document).ready(function(){
                         <option>모델</option>
                         <option value="purchase.html#page2">상담신청</option>
                         <option value="purchase.html#page3">가이드</option>
-                    </select> &gt;
+                    </select>
+                </div>
+            </div>
+        <div class="content" id="page2">
+            <figure class="vs">
+                <img src="./img/bg_visual.png" alt=""></img>
+            </figure>
+            <div class="bread">
+                <div class="bread_fr">
+                    <a href="index.html" class="home">HOME</a>
+                    <select name="sel2" id="sel2" class="sel"></select>
+                    <option>구매정보</option>
+                        <option value="network.html#page1">네트워크</option>
+                        <option value="membership.html#page1">멤버십</option>
+                        <option value="service.html#page1">고객지원</option>
+                        <option value="company.html#page1">회사소개</option>
+                    </select> &gt
                     <select name="opt" id="sel2">
                         <option>전시장</option>
                         <option value="network.html#page2">판매/시승</option>
                         <option value="network.html#page3">엑시던트 스페이스</option>
-                    </select> &gt;
-                    <select name="opt" id="sel3">
-                        <option>블루멤버스</option>
-                        <option value="membership.html#page2">차량관리</option>
-                        <option value="membership.html#page3">카페이</option>
-                    </select> &gt;
-                    <select name="opt" id="sel4">
-                        <option>FAQ</option>
-                        <option value="service.html#page2">문의</option>
-                        <option value="service.html#page3">공지사항</option>
-                    </select> &gt;
-                    <select name="opt" id="sel5">
-                        <option>사업이념</option>
-                        <option value="company.html#page2">사업망</option>
-                        <option value="company.html#page3">판매실적</option>
                     </select>
                 </div>
+            </div>
+        </div>
+        <div class="content" id="page3">
+            <figure class="vs">
+                <img src="./img/bg_visual.png" alt=""></img>
+            </figure>
+            <div class="bread">
+                <div class="bread_fr">
+                    <a href="index.html" class="home">HOME</a>
+                    <select name="sel3" id="sel3"></select>
+                </div>
+                <option>구매정보</option>
+                        <option value="network.html#page1">네트워크</option>
+                        <option value="membership.html#page1">멤버십</option>
+                        <option value="service.html#page1">고객지원</option>
+                        <option value="company.html#page1">회사소개</option>
+                    </select> &gt
+                <select name="opt" id="sel3">
+                    <option>블루멤버스</option>
+                    <option value="membership.html#page2">차량관리</option>
+                    <option value="membership.html#page3">카페이</option>
+                </select>
+            </div>
+        </div>
+        <div class="content" id="page4">
+            <figure class="vs">
+                <img src="./img/bg_visual.png" alt=""></img>
+            </figure>
+            <div class="bread">
+                <div class="bread_fr">
+                    <a href="index.html" class="home">HOME</a>
+                    <select name="sel4" id="sel4"></select>
+                </div>
+                <option>구매정보</option>
+                        <option value="network.html#page1">네트워크</option>
+                        <option value="membership.html#page1">멤버십</option>
+                        <option value="service.html#page1">고객지원</option>
+                        <option value="company.html#page1">회사소개</option>
+                <select name="opt" id="sel4">
+                    <option>FAQ</option>
+                    <option value="service.html#page2">문의</option>
+                    <option value="service.html#page3">공지사항</option>
+                </select>
+            </div>
+        </div>
+        <div class="content" id="page5">
+            <figure class="vs">
+                <img src="./img/bg_visual.png" alt=""></img>
+            </figure>
+            <div class="bread">
+                <div class="bread_fr">
+                    <a href="index.html" class="home">HOME</a>
+                    <select name="sel5" id="sel5"></select>
+                </div>
+                <option>구매정보</option>
+                        <option value="network.html#page1">네트워크</option>
+                        <option value="membership.html#page1">멤버십</option>
+                        <option value="service.html#page1">고객지원</option>
+                        <option value="company.html#page1">회사소개</option>
+                <select name="opt" id="sel5">
+                    <option>사업이념</option>
+                    <option value="company.html#page2">사업망</option>
+                    <option value="company.html#page3">판매실적</option>
+                </select>
             </div>
         </div>
         <script>
